--- a/main.html
+++ b/main.html
@@ -8,9 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Feedback Form</h1>
+<form action="" method="post">
+	<lable for="name">Name</lable>
+	<input type="text" id="name" minlength="3" maxlength="50" required><br><br>
+	<label for="portfolio">Portfolio</label>
+	<input type="url" id="portfolio" required><br><br>
+	<lable for="fav-color">Favorite Color</lable>
+	<input type="color" id="fav-color" ><br><br>
+	<label for="likeness">Likeness</label>
+	<input type="range" id="likeness" min="1" max="100" required><br><br>
+	<button type="submit">Submit</button>
+	
+	
     <script type="text/javascript" src="./script.js">
 </script>
-
+</form>
 </body>
 
 </html>
