--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
 	<input type="text" id="name" minlength="3" maxlength="50" required><br><br>
 	<label for="portfolio">Portfolio</label>
 	<input type="url" id="portfolio" required><br><br>
-	<lable for="fav-color">Favorite Color</lable>
-	<input type="color" id="fav-color" ><br><br>
+	<lable for="favColor">Favorite Color</lable>
+	<input type="color" id="favColor" ><br><br>
 	<label for="likeness">Likeness</label>
 	<input type="range" id="likeness" min="1" max="100" required><br><br>
 	<button type="submit">Submit</button>
