--- a/main.html
+++ b/main.html
@@ -10,11 +10,11 @@
 	<!-- the entire body must be written by student -->
 	<h1>Feedback Form</h1>
 <form action="" method="post">
-	<lable for="name">Name</lable>
+	<label for="name">Name</lable>
 	<input type="text" id="name" minlength="3" maxlength="50" required><br><br>
 	<label for="portfolio">Portfolio</label>
 	<input type="url" id="portfolio" required><br><br>
-	<lable for="favColor">Favorite Color</lable>
+	<label for="favColor">Favorite Color</lable>
 	<input type="color" id="favColor" ><br><br>
 	<label for="likeness">Likeness</label>
 	<input type="range" id="likeness" min="1" max="100" required><br><br>
